Fix issue where custom home page gif is squished.

--- a/css/custom.css
+++ b/css/custom.css
@@ -169,6 +169,12 @@ h4 {
   width: 100%;
 }
 
+.custom-gif-container {
+  padding-bottom: 44.683544303797468%;
+  position: relative;
+  width: 100%;
+}
+
 .index-img {
   position: absolute;
   top: 0;
